<resources>
    <string name="app_name">JuliusAssignment</string>
    <string name="register_if_you_dont_have_an_account"><font color="#00C9B8"><b>Register</b></font> if you don\'t have an account</string>
    <string name="login_to_app">Login to app</string>
    <string name="hello_welcome">Hello, Welcome!!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="tvintro">Welcome to our education app, where learning meets innovation! Our app is designed to provide you with a fun and interactive way to expand your knowledge and enhance your skills. Whether you are a student, a professional or simply someone who loves to learn, our app has something for everyone.</string>
    <string name="forgot_password"><font color="#00C9B8"><b>Forgot password</b></font></string>
    <string name="your_password">Your password</string>
    <string name="your_email_address">Your email address</string>
    <string name="create_an_account">Create an account</string>
    <string name="login_if_you_have_an_account"><font color="#00C9B8"><b>Login</b></font> if you have an account</string>
    <string name="hello">Hello</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login_page">Back to<font color="#00C9B8"><b> login </b></font>page</string>
    <string name="example_mail_com">example@mail.com</string>
</resources>