<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Intro">

    <RelativeLayout
        android:id="@+id/page_intro_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.80000001192093"
        android:background="@drawable/main_background_shape">

        <ImageView
            android:id="@+id/homegrown_education_logo_removebg_preview_1"
            android:layout_width="247dp"
            android:layout_height="206dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:contentDescription="homegrown_education_logo_removebg_preview_1"
            android:src="@drawable/homegrown_education_logo_removebg_preview_1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/page_intro_content"
            android:layout_width="535dp"
            android:layout_height="629dp"
            android:layout_marginTop="200dp"
            android:alpha="0.80000001192093"
            android:background="@drawable/login">

            <TextView
                android:id="@+id/tvhello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/hello_welcome"
                android:textColor="@color/title_color"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvinfo"
                android:layout_width="353dp"
                android:layout_height="234dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/tvintro"
                android:textColor="@color/title_color"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btnlogin"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="340dp"
                android:background="@drawable/rectangle_2_shape"
                android:text="Sign In"
                android:textColor="@color/bg_login_page_ek2_color"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="420dp"
                android:background="@drawable/rectangle_2_shape"
                android:text="@string/register"
                android:textColor="@color/bg_login_page_ek2_color"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>

